--- a/src/understanding_act/index.html
+++ b/src/understanding_act/index.html
@@ -17,7 +17,7 @@
     <body>
         <div style="width: 100%; display: flex;">
             <h3 id="title">Excel Killer</h3>
-            <h1 class="md-display-2">Basics of Pandas</h1>
+            <h1 class="md-display-2">Understanding the data</h1>
         </div>
         <div id="app" style="background-color: #f5f5f5">
             <md-tabs class="md-primary" >
@@ -161,25 +161,6 @@
                     </md-card>
                 </div>
              </div>
-             <div id="cardGroupCreator" class="md-layout-item md-size-100">
-                <md-card>
-                        <md-card-header>
-                            <md-card-header-text>
-                                <div class="md-title section-topic">You might like these articles:</div>
-                                <div class="md-subhead">{{layoutItems[0].subHeader}}</div>
-                            </md-card-header-text>
-                        </md-card-header>
-                         <md-card-content>
-                            <md-field>
-                                <ul>
-                                    <li>
-                                        <a style='cursor:pointer' href=" https://jakevdp.github.io/PythonDataScienceHandbook/03.04-missing-values.html">Handling Missing Data</a>
-                                    </li>
-                                </ul>
-                            </md-field>
-                        </md-card-content>
-                 </md-card>
-             <div>
         </div>
         `
     })
@@ -188,43 +169,40 @@
         data: function () {
             return {
             questions:[
-                {name:"Question 1 ", layoutItems: [
-                {header:"Tests",
-                subHeader:'', content:">>> solution()\n{'Item': {0: 'Apple ', 1: 'Peach', 2: 'Lemon', 3: 'Pineapple', 4: 'Watermelon', 5: 'Starfruit'}, 'Price per item, SG$': {0: 0.2, 1: 0.4, 2: 0.3, 3: 2.0, 4: 3.0, 5: 0.3}, 'Quantity': {0: 6, 1: 25, 2: 8, 3: 14, 4: 5, 5: 14}}"},
-                {header:"Editable Code Block", subHeader:"Solve questions written in the code comments", content:"import pandas as pd\nimport numpy as np\n\ndef solution():\n\t# Start Coding from here\n\t# TODO: Read csv file ('https://excelkiller-data.s3.amazonaws.com/Fruits1.csv') and save it into DataFrame 'df'\n\tdf = pd.read_csv('https://excelkiller-data.s3.amazonaws.com/Fruits1.csv')\n\t# End Coding from here\n\n\t#Return created DataFrame\n\treturn df.to_dict()"},
-                {header:"Reading data using pandas", subHeader:'',
-                intro:"<div>First of all we have to learn how to read data using Python. Let’s consider two most commonly used data formats - xls and csv. <br/><br/><b>CSV files</b> are file formats that contain plain text values separated by commas, It is a very widespread and popular file format for storing and reading data because it is simple and it’s compatible with most platforms. But CSV is only capable of storing a single sheet in a file, without any formatting and formulas in comparison with XLSX format. </div>",
-                excelFunc: "<div>Reading xlsx files with Excel - isn't a big deal, you just have to open your file with data. <br/>If you want to work with CSV files - you have to open a file and separate data using “text to columns” function. But depending on your regional settings it might mess up the separator (semicolon instead of comma) and eliminate leading + or 0 (which messes up phone numbers and zip codes).</div>",
-                pandaFunc: "<div>In Pandas we have two functions to read csv and excel file:<ul style='line-height: 1.8;'><li style='padding:0; margin:0'><b>.read_excel()</b> - Used to read an Excel file into a pandas DataFrame. Support both xls and xlsx file extensions from a local filesystem or URL. Support an option to read a single sheet or a list of sheets: </li><ul><li>Read file 'File_1.xlsx' that lies in folder where you are working: <br/><b>.read_excel('File_1.xlsx')</b></li><li>Read file that lies in another folder, path to the file file://localhost/path/to/File_1.xlsx: <br/><b>.read_excel(‘file://localhost/path/to/File_1.xlsx’)</b></li><li>Read one of worksheets (not the first): <br/><b>.read_excel(‘File_1.xlsx’, sheet_name = 1)</b></li></ul><li><b>.read_csv()</b> - Used to read a comma-separated values (csv) file into DataFrame.</li></ul></div>"
-                }], status:" "},
-                {name:"Question 2 ", layoutItems: [
-                {header:"Tests",
-                subHeader:'byteCodeChecker() and codeInfoChecker() are our functions used in these tests', content:">>> ifFunc(True,2)\n2 \n>>> ifFunc(bool('a'),11)\n11 \n>>> byteCodeChecker(ifFunc, 'ARGREPR', '==')\n'== not found'"},
-                {header:"Editable Code Block", subHeader:'Solve questions written in the code comments', content:"import pandas as pd\\n\\ndef solution():\\n\\t#read the csv ('https://excelkiller-data.s3.amazonaws.com/Fruits.csv') and save data in DataFrame df\\n\\tdf = pd.read_csv('https://excelkiller-data.s3.amazonaws.com/Fruits.csv')\n\n\t# Start Coding from here\n\t# TODO: Select items and their quantity from df and save it into new DataFrame - 'df2'\n\t#Hint: If you want to check exact column names use .columns function\n\tdf2 = df[['Item', 'Quantity']]\n\t# End Coding from here\n\n\t#Return new DataFrame\n\tdf2.to_dict()"},
-                {header:"Selection of columns and rows", subHeader:'',
-                intro:"<div>In real life cases you may not need the whole set of data to analyse, but you don’t want to delete the rest of the data as you may need it further. Pandas allows select only specific rows and save it in new DataFrame to work only under it. </div>",
-                excelFunc: "<div>You have to create separate worksheet and 'Copy-paste' data.</div>",
-                pandaFunc: "<div>Let’s say you want to print the list of items and their prices only.<br/>You should use this syntax:<p class='command'>df[['Item', Price per item, SG$ ']]</p><br/>If you don’t remember the exact name of the column, you can see the list of column names:<p class='command'>df.columns</p><br/>If you want to see content from separate row use the following function:<p class='command'># Access a group of rows and columns by label(s) or a boolean array<br/>.loc[1]</p></div>"
-                }], status:" "},
-                {name:"Question 3 ", layoutItems: [
-                {header:"Tests",
-                subHeader:'byteCodeChecker() and codeInfoChecker() are our functions used in these tests', content:">>> ifFunc(True,2)\n2 \n>>> ifFunc(bool('a'),11)\n11 \n>>> byteCodeChecker(ifFunc, 'ARGREPR', '==')\n'== not found'"},
-                {header:"Editable Code Block", subHeader:'Solve questions written in the code comments', content:"import pandas as pd\n\n#read and save data in DataFrame df\ndf = pd.read_csv(‘Fruits.csv’)\n\n# Start Coding from here\n	# TODO: Add new fruit and assign new parameter ‘Taste’  to the whole table\n#Parameters: Name - Passion Fruit, Price - 0.2 , Quantity - 13\n#Taste meaning - ‘Sweet’, ‘Sour’\n\n# STEP 1: Add new row\n\n# STEP 2: Declare a list that is to be converted into a column\n\n#STEP 3:  Create new column from declared list\n\n	# End Coding from here\n#Return new DataFrame\ndf2\n"},
-                {header:"Adding new columns and rows", subHeader:'',
-                intro:"<div>Sometimes you may need to create new rows to add new data or merge two data sources (two tables) with the same type of Data. Or you may need to introduce a  new parameter that derived from others or assigned manually, so you need to know how to create new column.</div>",
-                excelFunc:"As we all know, this can be done easily in Excel by few clicks.",
-                pandaFunc: "<div>There are a lot of ways to add new rows, one of them - using append function that also is useful for DataFrame concatenation:  <ul style='line-height: 1.8;'><li style='padding:0; margin:0'><b>.append()</b> - Append rows of other to the end of caller, returning a new object.Variable for append is a dictionary with values of each column:</li><p class='command'>.append({‘Item’: ‘Name of the item’, 'Price per item, SG$' : X , 'Quantity': Y})</p></ul>If you want to create new column use the following syntaxis:<p class='command'>df[‘column name’]= data</p></div>"
-                }], status:""},
-
-                {name:"Question 4 ", layoutItems: [
+                {name:"Practice 1 ", layoutItems: [
                 {header:"Tests",
                 subHeader:'', content:">>> solution()\n{'Matt': 10.0, 'Sylvia': 15.0, 'Javier': 20.0}"},
-                {header:"Editable Code Block", subHeader:"Solve questions written in the code comments", content:"import pandas as pd\n\ndf = pd.read_csv(‘Fruits.csv’)\ndf2 = df.append({'Item' : 'Passion Fruit', 'Price per item, SG$' : 0.8 , 'Quantity': 19}, ignore_index=True)\ntaste = ['Sweet', 'Sweet', 'Sour','Sweet','Sweet','Sour']  \ndf2['Taste'] = taste\n\n# Start Coding from here\n#TODO: Group by taste and find a total quantity of fruits in each category, save result as ‘df_grouped’\n\n# STEP 1: Add ‘Taste’ column and assign taste values to each fruit\n# STEP 2: Group by “Taste” parameter and find a sum of other parameter\n\n# End Coding from here\n#Return result \ndf_grouped\n"},
-                {header:"Basic grouping of data", subHeader:'',
-                intro:"<div>It is exactly the right time to see the advantages of using Pandas instead of Excel. Pandas allows to do basic analysis significantly faster than excel. For example - you need to find total/average meaning of values for items with common features. </div>",
-                excelFunc: "There are a lot of ways to group data and Excel, one of the most widely used - Pivot table. ",
-                pandaFunc: "<div>Groupby() - invaluable function that makes our lives easier:<ul style='line-height: 1.8;'><li style='padding:0; margin:0'><b>.groupby()</b> -  is used to split the data into groups based on some criteria.Pandas objects can be split on any of their axes. The abstract definition of grouping is to provide a mapping of labels to group names. Handy to  use it with aggregation function, for example: </li><ul><li>.sum()</li><li>.mean()</li><li>.min()</li><li>.max()</li><li>and etc.</li></ul></ul></div>"
-                }], status:" "}
+                {header:"Editable Code Block", subHeader:"Solve questions written in the code comments", content:"import pandas as pd\n\ndf = pd.DataFrame(data='https://excelkiller-data.s3.amazonaws.com/Fruits.csv')\n\n# Start Coding from here\n# TODO: Return first 2 rows as a sample of dataframe\ndf.head(n=2)\n# End Coding from here"},
+                {header:"Data preview", subHeader:'',
+                intro:"When you start to work with data, you might need to get a quick understanding of the data. Sometimes, it’s handy not to print the whole dataframe and flood your screen with data. You can see a preview by using a few lines of code and print them.",
+                excelFunc: "You can't preview a part of the data using Excel",
+                pandaFunc: "<div>Pandas has a bunch of functions that shows a preview of the data, using the following functions you can print N rows from DataFrame: <ul style='line-height: 1.8;'><li style='padding:0; margin:0'> <p class='command'>.head(n = 6) </p>This function returns the first N (6 in this example) rows for the object based on position. By default head function returns 5 rows, which is usually a good amount</li><li style='padding:0; margin:0'> <p class='command'>.tail(n = 6)</p>This function returns last N rows from the object based on position</li><li style='padding:0; margin:0'> <p class='command'>.sample(n = 6)</p>Returns a random sample of items from an axis of an object.</li></ul></div>"}], status:" "},
+                {name:"Practice 2 ", layoutItems: [
+                {header:"Tests",
+                subHeader:'byteCodeChecker() and codeInfoChecker() are our functions used in these tests', content:">>> ifFunc(True,2)\n2 \n>>> ifFunc(bool('a'),11)\n11 \n>>> byteCodeChecker(ifFunc, 'ARGREPR', '==')\n'== not found'"},
+                {header:"Editable Code Block", subHeader:"Solve questions written in the code comments", content:"import pandas as pd\n\ndf = pd.DataFrame(data='https://excelkiller-data.s3.amazonaws.com/Fruits.csv')\n\n# Start Coding from here\n# TODO: Find and print quantity of empty cells in DataFrame and unique values in ‘Items’ column.\n#Hint: to print use syntax -  print(‘Text comment:', variable)\n# STEP 1: Save quantity of empty cells in new variable ‘empty_cells’ and print it\nempty_cells = df.isnull().sum()\n# STEP 2: Save list of unique values from column ‘Item’ into list named ‘unique_items’ and print it\nunique_items = df['Item'].unique() \n# End Coding from here\n"},
+                {header:"Looking at the data", subHeader:'',
+                intro:"We need to start getting more in-depth with Pandas. Next step of data preview - finding missed and unique data.",
+                excelFunc: "One of the ways to detect missing values - use sort tool and see only missing values or check unique quantity. If you need to print list of unique values - use advanced filter or lookup function on interesting column. ",
+                pandaFunc: "<div>Let’s start looking at examples of how to detect missing or unique values - to have overview of diversity of data: <ul style='line-height: 1.8;'><li style='padding:0; margin:0'> <p class='command'>.isnull()</p>This function takes a scalar or array-like object and indicates whether values are missing. Pandas will recognize both empty cells and “NA” types as missing values. For example, if you want to find how many missing values in dataframe ‘df’ column ‘age’ is missing, you can check it with:<p class='command'>df['age'].isnull().sum()</p></li><li style='padding:0; margin:0'> <p class='command'>.unique</p> Return unique values of Series object. Can be applied to exact row or column. Similarly, for unique values in column ‘age’ in dataframe ‘df’:<p class='command'>df['age'].unique()</p></li></ul></div>"}], status:" "},
+                {name:"Practice 3 ", layoutItems: [
+                {header:"Tests",
+                subHeader:'byteCodeChecker() and codeInfoChecker() are our functions used in these tests', content:">>> ifFunc(True,2)\n2 \n>>> ifFunc(bool('a'),11)\n11 \n>>> byteCodeChecker(ifFunc, 'ARGREPR', '==')\n'== not found'"},
+                {header:"Editable Code Block", subHeader:"Solve questions written in the code comments", content:"import pandas as pd\n\ndf = pd.DataFrame(data='https://excelkiller-data.s3.amazonaws.com/Fruits.csv')\n\n# Start Coding from here\n# TODO: Count values in 'Price per item, SG$' column and return it it ascending order.\n# Note that value_counts function works with series (particularly with DataFrame columns)\ndf['Price per item, SG$'].value_counts(ascending=True)\n# End Coding from here\n"},
+                {header:"Count values", subHeader:'',
+                intro:"During first look on data you may need to quickly get the number of times each parameter appears in DataFrame. The Pandas library is equipped with a number of useful functions for understanding of what our data contains and value_counts is of one of them. ",
+                excelFunc: "You have to create a Pivot table and choose parameter that you want to be counted.",
+                pandaFunc: "<div>The value_counts() method returns a Series containing the counts of unique values. This means, for any column in a dataframe, this method returns the count of unique entries in that column : <ul style='line-height: 1.8;'><li style='padding:0; margin:0'> <p class='command'>.value_counts() </p>Return a Series containing counts of unique values. The following parameters of the function are most useful for understanding of data:<ul><li><b>normalize=True:</b>by setting this parameter True, the returned object will contain the relative frequencies of the unique values. The normalize parameter is set to False by default.\n</li><li><b>ascending=True:</b>The series returned by value_counts() is in descending order by default. We can reverse the case by setting the ascending parameter to True</li><li><b>dropna=False:</b>the count of null values is excluded from the result. But, the same can be displayed easily by setting the dropna parameter to False</li></ul></li></ul></div>"}], status:" "},
+
+
+                {name:"Practice 4 ", layoutItems: [
+                {header:"Tests",
+                subHeader:'byteCodeChecker() and codeInfoChecker() are our functions used in these tests', content:">>> ifFunc(True,2)\n2 \n>>> ifFunc(bool('a'),11)\n11 \n>>> byteCodeChecker(ifFunc, 'ARGREPR', '==')\n'== not found'"},
+                {header:"Editable Code Block", subHeader:"Solve questions written in the code comments", content:"import pandas as pd\n\ndf = pd.DataFrame(data='https://excelkiller-data.s3.amazonaws.com/Fruits.csv')\n\n# Start Coding from here\n# TODO: Find difference between max and min price of Items: \n# STEP 1: Count max of column 'Price per item, SG$' and store it in variable ‘max_price’\nmax_price = df['Price per item, SG$'].max()\n# STEP 2: Count min of column 'Price per item, SG$' and store it in variable ‘min_price’\nmin_price = df['Price per item, SG$'].min()\n# STEP 3:  Find difference between maximum and minimum and store it in variable ‘max_price_difference’\nmax_price_difference = max_price - min_price\n# End Coding from here\n"},
+                {header:"Basic Statistics", subHeader:'',
+                intro:"Once you understand your data, you probably want to run some basic statistics and calculations on your pandas DataFrame. It is really easy. Let’s learn some of the most common and basic statistics that you may want to use. ",
+                excelFunc: "Excel has its own functions for finding maximum, minimum, average meanings.",
+                pandaFunc: "<div>To sum all of the values in a particular column of a DataFrame, you can do the following: <ul style='line-height: 1.8;'><li style='padding:0; margin:0'> <p class='command'>df[‘column_name’].sum() </p>This function skips the missing values by default. However, you can define to keep missing values by passing a skipna argument with False: <ul><li><p class='command'>df[‘column_name’].sum(skipna=False)</p></li></ul></li></ul>  To count arithmetic mean: <ul style='line-height: 1.8;'><li style='padding:0; margin:0'> <p class='command'>df[‘column_name’].mean() </p>Use this syntax to count mean for specified column.</li><li style='padding:0; margin:0'> <p class='command'>df.mean(axis=0)</p>Passing the argument of axis=0 returns the mean of every single column in the DataFrame</li> <li style='padding:0; margin:0'> <p class='command'>df.mean(axis=1) </p> Passing the argument of axis=1 will return the mean of every single row in the DataFrame </li> </ul>  To find maximum, minimum and median values: <ul style='line-height: 1.8;'><li style='padding:0; margin:0'> <p class='command'>df[‘column_name’].max() </p></li><li style='padding:0; margin:0'> <p class='command'>df[‘column_name’].min()</p></li> <li style='padding:0; margin:0'> <p class='command'>df[‘column_name’].median() </p></li> </ul></div>"}], status:" "}
             ]
         }
         },
@@ -364,6 +342,10 @@
     }
     br {
         margin: 0;
+    }
+    .graph-1 {
+       height: 300px;
+        width: 300px
     }
     #title {
         margin-left: 27px;
