--- a/src/basics_act/index.html
+++ b/src/basics_act/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width,initial-scale=1,minimal-ui" name="viewport">
-        <script async pd.read_csvsrc="https://www.googletagmanager.com/gtag/js?id=UA-147552064-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147552064-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
