--- a/src/basics_act/index.html
+++ b/src/basics_act/index.html
@@ -16,7 +16,8 @@
     </head>
     <body>
         <div style="width: 100%; display: flex;">
-            <h3 id="title">Excel Killer</h3>
+<!--            <h3 id="title">Excel Killer</h3>-->
+            <a href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/"><img id="title" class="logo" src="https://excel-killer-images.s3.amazonaws.com/logo.png" /></a>
             <h1 class="md-display-2">Basics of Pandas</h1>
         </div>
         <div id="app" style="background-color: #f5f5f5">
@@ -161,25 +162,6 @@
                     </md-card>
                 </div>
              </div>
-             <div id="cardGroupCreator" class="md-layout-item md-size-100">
-                <md-card>
-                        <md-card-header>
-                            <md-card-header-text>
-                                <div class="md-title section-topic">You might like these articles:</div>
-                                <div class="md-subhead">{{layoutItems[0].subHeader}}</div>
-                            </md-card-header-text>
-                        </md-card-header>
-                         <md-card-content>
-                            <md-field>
-                                <ul>
-                                    <li>
-                                        <a style='cursor:pointer' href=" https://jakevdp.github.io/PythonDataScienceHandbook/03.04-missing-values.html">Handling Missing Data</a>
-                                    </li>
-                                </ul>
-                            </md-field>
-                        </md-card-content>
-                 </md-card>
-             <div>
         </div>
         `
     })
@@ -259,6 +241,7 @@
     }
     body {
         background-color: #506987;
+        overflow-y: auto;
     }
     .md-card {
         width: 90%;
@@ -309,7 +292,7 @@
         width:100%;
     }
     .md-tab{
-        overflow-x: auto;
+        overflow: auto;
     }
     .md-tab::-webkit-scrollbar {
     width: 0px;
@@ -346,6 +329,14 @@
         margin:0px;
         padding:0px
     }
+    .md-tab {
+        overflow-x: hidden !important;
+    }
+    .logo {
+        height: 40px;
+        padding: 5px;
+        width: 120px
+    }
     .md-tabs-navigation{
         justify-content:center !important
     }
@@ -356,6 +347,7 @@
         padding-bottom: 2px;
         color: #236B8E;"
     }
+
     .md-field {
         margin-bottom: 10px;
     }
