--- a/src/visualize_act/index.html
+++ b/src/visualize_act/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div style="width: 100%; display: flex;">
-            <h3 id="title">Excel Killer</h3>
+            <a href="https://nvl81kvt84.execute-api.us-east-1.amazonaws.com/Prod/"><img id="title" class="logo" src="https://excel-killer-images.s3.amazonaws.com/logo.png" /></a>
             <h1 class="md-display-2">Visualizing data using Pandas</h1>
         </div>
         <div id="app" style="background-color: #f5f5f5">
@@ -349,6 +349,14 @@
     }
     .cm-s-default{
         height:100%
+    }
+    .md-tab {
+        overflow-x: hidden !important;
+    }
+    .logo {
+        height: 40px;
+        padding: 5px;
+        width: 120px
     }
     .md-card-header{
         padding:0 16px 16px 16px
