--- a/src/basics_act/index.html
+++ b/src/basics_act/index.html
@@ -323,7 +323,7 @@
         min-height:300px
     }
     .md-tabs-container, .md-tabs-container .md-tab textarea, .md-tabs-content{
-        height:100% !important
+        height:auto !important
     }
     .md-field{
         margin:0px;
@@ -353,6 +353,7 @@
     }
     .md-card {
         min-height: 0;
+        heigth: auto;
     }
     br {
         margin: 0;
@@ -365,9 +366,6 @@
     }
     .md-button{
         margin:10px !important
-    }
-    .cm-s-default{
-        height:100%
     }
     .md-card-header{
         padding:0 16px 16px 16px
